--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -3,79 +3,84 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
 html {
 	height: 100%;
 }
 
 body {
-    position: relative;
+	padding-top: 70px;
+	height: 100%;
+
+	/*  position: relative;
     margin: 0;
     padding-bottom: 6rem;
-    min-height: 100%; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    min-height: 100%; */
+	/* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 .slide-image {
-    width: 100%;
+	width: 100%;
 }
 
 .carousel-holder {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
-.carousel-control,
-.item {
-    border-radius: 4px;
+.carousel-control, .item {
+	border-radius: 4px;
 }
 
 .caption {
-    height: 130px;
-    overflow: hidden;
+	height: 130px;
+	overflow: hidden;
 }
 
 .caption h4 {
-    white-space: nowrap;
+	white-space: nowrap;
 }
 
 .thumbnail img {
-    width: 100%;
+	width: 100%;
 }
 
 .ratings {
-    padding-right: 10px;
-    padding-left: 10px;
-    color: #d17581;
+	padding-right: 10px;
+	padding-left: 10px;
+	color: #d17581;
 }
 
 .thumbnail {
-    padding: 0;
+	padding: 0;
 }
 
 .thumbnail .caption-full {
-    padding: 9px;
-    color: #333;
+	padding: 9px;
+	color: #333;
 }
 
 footer {
-    margin: 0px;
+	margin: 0;
 }
 
-<!--adding wrapper class-->
-.wrapper{
+<!--
+adding wrapper class-->.wrapper {
 	min-height: 100%;
 	position: relative;
 }
 
-.content{
-	margin: 0 auto;
-    padding-top: 64px;
-    max-width: 1200px;
-    width: 100%;
+.content {
+	padding-bottom:60px;
+	
+	/* margin: 0 auto;
+	padding-top: 64px;
+	max-width: 1200px;
+	width: 100%; */
 }
 
-.footer{
+.footer {
 	position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
+	/* right: 0; */
+	bottom: 0;
+	/* left: 0; */
+	height:60px;
 }
